{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 23,
  "lineage": "7ba2865a-1d91-614f-26b8-44826381e5ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05309b1a3aa49ffe0",
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:elastic-ip/eipalloc-05309b1a3aa49ffe0",
            "association_id": "eipassoc-0526f5aea4ef8a4fe",
            "domain": "vpc",
            "id": "eipalloc-05309b1a3aa49ffe0",
            "instance": "i-0b144f94e00ccd8d6",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-01a2d9199e3906c87",
            "private_dns": "ip-10-0-1-32.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-35-76-187-226.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.76.187.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-eip",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-eip",
              "Project": "stock-ledger"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_instance.app",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-099da3c6c9e8abd22",
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:instance/i-0b144f94e00ccd8d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "stock-ledger-ec2-profile",
            "id": "i-0b144f94e00ccd8d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stock-ledger-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01a2d9199e3906c87",
            "private_dns": "ip-10-0-1-32.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.32",
            "public_dns": "ec2-52-198-99-35.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.198.99.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061822048e6f3c0f9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c8555881d21e0d4",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-server",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-server",
              "Project": "stock-ledger"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c608d71550b82678"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_iam_policy_document.ec2_assume"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:internet-gateway/igw-08f02ef30eb2a5ca2",
            "id": "igw-08f02ef30eb2a5ca2",
            "owner_id": "831369408855",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-igw",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-igw",
              "Project": "stock-ledger"
            },
            "vpc_id": "vpc-0a1b3acea19882192"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:route-table/rtb-0373d80acd1e5666a",
            "id": "rtb-0373d80acd1e5666a",
            "owner_id": "831369408855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f02ef30eb2a5ca2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-rt",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-rt",
              "Project": "stock-ledger"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1b3acea19882192"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640bbfefa6d896b3",
            "route_table_id": "rtb-0373d80acd1e5666a",
            "subnet_id": "subnet-01c8555881d21e0d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:security-group/sg-0c608d71550b82678",
            "description": "Stock Ledger EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c608d71550b82678",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stock-ledger-sg",
            "name_prefix": "",
            "owner_id": "831369408855",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-sg",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-sg",
              "Project": "stock-ledger"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a1b3acea19882192"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:subnet/subnet-01c8555881d21e0d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c8555881d21e0d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831369408855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-public",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-public",
              "Project": "stock-ledger"
            },
            "vpc_id": "vpc-0a1b3acea19882192"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:831369408855:vpc/vpc-0a1b3acea19882192",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e72d03ea044d670d",
            "default_route_table_id": "rtb-03011095106c98394",
            "default_security_group_id": "sg-08583b164baeb716d",
            "dhcp_options_id": "dopt-04fe964a4de437481",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a1b3acea19882192",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03011095106c98394",
            "owner_id": "831369408855",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-vpc",
              "Project": "stock-ledger"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "stock-ledger-vpc",
              "Project": "stock-ledger"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}